--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -11,7 +11,7 @@
           <p class="copyright">{{.Site.Data.footer.site_footer.copyright}}</p>
           <p class="copyright">{{.Site.Data.footer.site_footer.description}}</p>
           <ul class="menu">
-            <li><a href="{{ .Site.BaseURL}}">Bashaw United Church</a></li>
+            <li><a href="{{ .Site.BaseUrl}}">Bashaw United Church</a></li>
           </ul>
         </div>
       </footer>
@@ -23,13 +23,13 @@
       </div>
 
     <!-- Scripts -->
-      <script src="{{ .Site.BaseURL }}/js/jquery.dropotron.min.js"></script>
-      <script src="{{ .Site.BaseURL }}/js/jquery.scrollex.min.js"></script>
-      <script src="{{ .Site.BaseURL }}/js/skel.min.js"></script>
-      <script src="{{ .Site.BaseURL }}/js/jquery.fitvids.js"></script>
-      <script src="{{ .Site.BaseURL }}/js/util.js"></script>
-      <!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-      <script src="{{ .Site.BaseURL }}/js/main.js"></script>
+      <script src="/js/jquery.dropotron.min.js"></script>
+      <script src="/js/jquery.scrollex.min.js"></script>
+      <script src="/js/skel.min.js"></script>
+      <script src="/js/jquery.fitvids.js"></script>
+      <script src="/js/util.js"></script>
+      <!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
+      <script src="/js/main.js"></script>
     {{ with .Site.Params.googleAnalytics }}
       <script>
         var _gaq=[['_setAccount','{{ . }}'],['_trackPageview']];
