got bashaw site ready for testing

--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -11,7 +11,7 @@
           <p class="copyright">{{.Site.Data.footer.site_footer.copyright}}</p>
           <p class="copyright">{{.Site.Data.footer.site_footer.description}}</p>
           <ul class="menu">
-            <li><a href="{{ .Site.BaseUrl}}">Bashaw United Church</a></li>
+            <li><a href="{{ .Site.BaseURL}}">Cool</a></li>
           </ul>
         </div>
       </footer>
