--- a/layouts/contact/single.html
+++ b/layouts/contact/single.html
@@ -32,7 +32,7 @@
         <li>
           <span class="icon-wrapper"><span class="icon fa-home"></span></span>
           <h3>Location</h3>
-          <p>Bashaw United Church <br>
+          <p>Cool <br>
              5036 52 Avenue<br>
              Bashaw, AB
           </p>
