--- a/layouts/partials/foot.html
+++ b/layouts/partials/foot.html
@@ -23,13 +23,13 @@
       </div>
 
     <!-- Scripts -->
-      <script src="/js/jquery.dropotron.min.js"></script>
-      <script src="/js/jquery.scrollex.min.js"></script>
-      <script src="/js/skel.min.js"></script>
-      <script src="/js/jquery.fitvids.js"></script>
-      <script src="/js/util.js"></script>
-      <!--[if lte IE 8]><script src="/js/ie/respond.min.js"></script><![endif]-->
-      <script src="/js/main.js"></script>
+      <script src="{{ .Site.BaseURL }}/js/jquery.dropotron.min.js"></script>
+      <script src="{{ .Site.BaseURL }}/js/jquery.scrollex.min.js"></script>
+      <script src="{{ .Site.BaseURL }}/js/skel.min.js"></script>
+      <script src="{{ .Site.BaseURL }}/js/jquery.fitvids.js"></script>
+      <script src="{{ .Site.BaseURL }}/js/util.js"></script>
+      <!--[if lte IE 8]><script src="{{ .Site.BaseURL }}/js/ie/respond.min.js"></script><![endif]-->
+      <script src="{{ .Site.BaseURL }}/js/main.js"></script>
     {{ with .Site.Params.googleAnalytics }}
       <script>
         var _gaq=[['_setAccount','{{ . }}'],['_trackPageview']];
